@@ -48,8 +48,6 @@ enum ipmi_fru_argp_option_keys
   {
     DEVICE_ID_KEY = 'e',
     VERBOSE_KEY = 'v',
-    /* legacy */
-    SKIP_CHECKS_KEY = 's',
     BRIDGE_FRU_KEY = 160,
     INTERPRET_OEM_DATA_KEY = 161,
     FRU_FILE_KEY = 162,
@@ -61,8 +59,6 @@ struct ipmi_fru_arguments
   uint8_t device_id;
   int device_id_set;
   unsigned int verbose_count;
-  /* legacy */
-  int skip_checks;
   int bridge_fru;
   int interpret_oem_data;
   char *fru_file;
